<resources>
    <string name="app_name">Bathing Sites</string>
    <string name="bath_image_description">Bathing Sites image</string>
    <string name="add_button_description">Add button</string>
    <string name="settings">Settings</string>

    <string name="name">Name: </string>
    <string name="description">Description: </string>
    <string name="address">Address: </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="grade">Grade: </string>
    <string name="water_temp">Water temperature: </string>
    <string name="date_water_temp">Date water temperature: </string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="name_error_message">Name is required.</string>
    <string name="address_error_message">Address is required.</string>
    <string name="latitude_error_message">Latitude is required.</string>
    <string name="longitude_error_message">Longitude is required.</string>
    <string name="star_grading">Star grading</string>
    <string name="show_weather">Show weather</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="getting_weather">Getting current weather</string>
    <string name="weather_image_content_description">Weather icon</string>


    <string name="show_weather_dialog_title">Current weather</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="fetch_weather_header">Fetch weather data from</string>
    <string name="fetch_weather_key">Fetch_weather</string>


    <string name="new_bathing_site_option_header">New bathing site</string>
    <string name="new_bathing_site_option_key">new_bathing_site</string>
    <string name="bathing_site_key">bathing_site_key</string>

    <!-- Messages Preferences -->
    <string name="fetch_weather_settings_default_summary">https://dt031g.programvaruteknik.nu/bathingsites/weather.php</string>
    <string name="new_bathing_site_option_message">Show new bathing site</string>
    <string name="download_bathing_site_url">https://dt031g.programvaruteknik.nu/bathingsites/download/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="set_weather_url">Enter new url for weather information</string>
    <string name="set_new_bathing_sites_download_url">Enter new  url to download bathiing site</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>