<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddBathingSiteFragment">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/add_bathing_site_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:minHeight="@dimen/add_bathing_site_edit_text_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="@dimen/add_bathing_site_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEntry" />

        <EditText
            android:id="@+id/descriptionEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textLongMessage"
            android:minHeight="@dimen/add_bathing_site_edit_text_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLabel"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/add_bathing_site_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEntry" />

        <EditText
            android:id="@+id/addressEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="@dimen/add_bathing_site_edit_text_min_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressLabel"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/latitudeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="@dimen/add_bathing_site_font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressEntry"
            app:layout_constraintWidth_percent="@fraction/half_fraction" />

        <EditText
            android:id="@+id/latitudeEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="@dimen/add_bathing_site_edit_text_min_height"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitudeLabel"
            app:layout_constraintWidth_percent="@fraction/half_fraction"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/longitudeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/add_bathing_site_font_size"
            app:layout_constraintStart_toEndOf="@+id/latitudeLabel"
            app:layout_constraintTop_toBottomOf="@+id/addressEntry"
            app:layout_constraintWidth_percent="@fraction/half_fraction" />


        <EditText
            android:id="@+id/longitudeEntry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="@dimen/add_bathing_site_edit_text_min_height"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/latitudeEntry"
            app:layout_constraintTop_toBottomOf="@+id/longitudeLabel"
            app:layout_constraintWidth_percent="@fraction/half_fraction"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/gredeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grade"
            android:textSize="@dimen/add_bathing_site_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitudeEntry"
            tools:layout_editor_absoluteY="326dp" />

        <RatingBar
            android:id="@+id/gradeEntry"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_grading"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gredeLabel" />

        <TextView
            android:id="@+id/tempLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/water_temp"
            android:textSize="@dimen/add_bathing_site_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gradeEntry" />

        <EditText
            android:id="@+id/tempEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberSigned|number"
            android:minHeight="@dimen/add_bathing_site_edit_text_min_height"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempLabel"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tempDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_water_temp"
            android:textSize="@dimen/add_bathing_site_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempEntry" />

        <EditText
            android:id="@+id/dateWaterEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="@dimen/add_bathing_site_edit_text_min_height"
            android:textColorHint="#757575"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempDateLabel"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>